--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -39,6 +39,8 @@
 		"@wagmi/core": "0.10.2",
 		"@web3modal/ethereum": "^2.2.2",
 		"@web3modal/html": "^2.2.2",
-		"ethers": "^5.7.2"
+		"ethers": "^5.7.2",
+		"particles.js": "^2.0.0",
+		"svelte-particles": "^2.9.3"
 	}
 }
