--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,12 +35,14 @@
     "vite-plugin-node-polyfills": "^0.7.0"
   },
   "dependencies": {
-    "@picocss/pico": "^1.5.9",
     "@types/node": "^18.15.11",
+    "@picocss/pico": "^1.5.9",
     "@wagmi/core": "0.10.2",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/html": "^2.2.2",
+    "ethers": "^5.7.2",
+    "particles.js": "^2.0.0",
     "axios": "^1.3.5",
-    "ethers": "^5.7.2"
+    "svelte-particles": "^2.9.3"
   }
 }
