--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,6 +35,7 @@
     "vite-plugin-node-polyfills": "^0.7.0"
   },
   "dependencies": {
+    "@lit-protocol/lit-node-client": "^2.1.118",
     "@picocss/pico": "^1.5.9",
     "@types/node": "^18.15.11",
     "@wagmi/core": "0.10.2",
