--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -46,6 +46,7 @@
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "particles.js": "^2.0.0",
-    "svelte-particles": "^2.9.3"
+    "svelte-particles": "^2.9.3",
+    "xmlhttprequest": "^1.8.0"
   }
 }
