--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,8 @@ export FOUNDRY=http://localhost:8545
 export OPTIMISM_GOERLI=https://goerli.optimism.io
 export SCROLL=https://alpha-rpc.scroll.io/l2
 export SEPOLIA=https://rpc.sepolia.dev
+export SEPOLIA_RPC_URL=https://rpc.sepolia.org
 export TAIKO=https://l2rpc.hackathon.taiko.xyz
+
+export VITE_WEB3MODAL_PROJECT_ID=
+export DREAMSTUDIO_API_KEY=
